# NowKwLang

./: .gitignore  README.md  __main__.py  launcher.py  pyproject.toml
NowKwLang/: __init__.py  __main__.py  constants.py  context.py  errors.py  interactive_console.py  lexer.py  run.py
NowKwLang/NkL_std_libs/: classes.py  conditions.py  errors.py  exceptions.py  funcs.py  imports.py  namespaces_withs.py  scope.py  utils.py
NowKwLang/modules/: __init__.py  conditions.py  constants.py  exceptions.py  funcs.py  imports.py  loops.py  namespaces.py  namespaces_withs.py  scope.py  utils.py
NowKwLang/parser/: __init__.py  _stream.py  block.py  collections.py  expr.py  statment.py
examples/: basic.py  code.NkL  code2.NkL  import_A.NkL  import_B.NkL  loops.NkL  test.NkL
tests/: basic.py  code2.NkL
